--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-export DB_USER=mco
-export DB_PASS=102938
+export DB_USER=postgres
+export DB_PASS=administrator
 export DB_HOST=localhost
 export DB_PORT=5432
 export DB_NAME=Auth
 
 export JWT_SECRET=app-great-thanos
-export JWT_EXPIRE_TIME=900 # 900 seconds = 15 minutes 
+export JWT_EXPIRE_TIME=900 # 900 seconds = 15 minutes
